# PC-WallDistanceProject

./: CMakeLists.txt  main.cxx
ProjectDoc/: AB_timings.xlsx
ProjectDoc/Diagrams/: BruteForceMethod.docx  BruteForceParallel2.dia  BruteForceSerial.dia  diagrams.pptx  wallDistanceCalculation.dia  wallDistanceUML.dia
ProjectDoc/grid/: airfoil.x  airfoilMesh.glf.sb-74c836f9-aba37J  airfoilMesh.rtf  background.x  chimera_grid.pw  chimera_one.x  chimera_tecplot.lay  (+3 more)
schedule_worksplit/: gantt_chart.xlsx
src/: .cproject  .project  CMakeLists.txt  batch.run  main.cpp  main.cxx  test.file
src/advancingBoundary/: CMakeLists.txt
src/advancingBoundary/parallel/: CMakeLists.txt  ab_pt1.cu  ab_pt2.cu  ab_pt2.h  ab_pt3.cu  ab_pt3.h  cell_pt1.h  cell_pt2.h  cell_pt3.h  compactAuxiliaryGrid_pt1.c  compactAuxiliaryGrid_pt1.h  compactAuxiliaryGrid_pt2.c  compactAuxiliaryGrid_pt2.h  compactAuxiliaryGrid_pt3.c  compactAuxiliaryGrid_pt3.h  computeAuxiliaryGrid_pt1.c  computeAuxiliaryGrid_pt1.h  computeAuxiliaryGrid_pt2.c  computeAuxiliaryGrid_pt2.h  computeAuxiliaryGrid_pt3.c  computeAuxiliaryGrid_pt3.h  cuda_utils.h
src/advancingBoundary/serial/: CMakeLists.txt  ab_parallel_t1.c  ab_parallel_t1.h  ab_serial.c  ab_serial.h  ab_serial_t2.c  ab_serial_t2.h  ab_serial_t3.c  ab_serial_t3.h  boundBox.c  boundBox.h  cell.h  cell_t2.h  cell_t3.h  compactAuxiliaryGrid.c  compactAuxiliaryGrid.h  compactAuxiliaryGrid_t2.c  compactAuxiliaryGrid_t2.h  compactAuxiliaryGrid_t3.c  compactAuxiliaryGrid_t3.h  computeAuxiliaryGrid.c  computeAuxiliaryGrid.h  computeAuxiliaryGrid_t2.c  computeAuxiliaryGrid_t2.h  computeAuxiliaryGrid_t3.c  computeAuxiliaryGrid_t3.h  cudaTest.cu  cudaTest.h  face_t2.h  node.h  writecell.c  writecell.h  writefaces.c  writefaces.h  writefaces_t2.c  writefaces_t2.h
src/bruteforce/: CMakeLists.txt  bruteforce.cxx  bruteforce.h  bruteforce_parallel.cu  bruteforce_parallel.h
src/grid/: grid_fine.x
src/postproc/: CMakeLists.txt  array_to_mat.f90  cell_to_vertex.f90  postproc.cxx  postproc.h  writevar.f90
src/preproc/: .writevar.f90.swp  CMakeLists.txt  array_to_mat.f90  cell_to_vertex.f90  preproc.cpp  preproc.cxx  preproc.h  readmesh.f90  writevar.f90
src/radius/: CMakeLists.txt  radius.cxx  radius.h
(+47 files in other folders)
